--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.0.1
 Werkzeug==2.0.1
-PyJWT==2.1.0
 python-dotenv==0.19.0
-SQLAlchemy==1.4.23
-requests==2.26.0
-gunicorn==20.1.0
+bandit==1.7.0
+safety==1.10.3
+pylint==2.8.2
+pytest==6.2.4
+pytest-cov==2.12.0
