--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-python-dotenv==1.0.0
-pytest==7.4.2
-bandit==1.7.5
+# requirements.txt
+Flask==3.0.2
+Werkzeug==3.0.6  # Fixed multiple vulnerabilities (CVE-2024-34069, CVE-2023-46136, CVE-2024-49767)
+python-dotenv==1.0.1
+bandit==1.7.7    # Fixed PVE-2024-64484
+pytest==8.0.2
 safety==2.3.5
-pylint==2.17.5
+pylint==3.0.3
+gunicorn==21.2.0
