--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv==1.0.1
 bandit==1.7.7    # Fixed PVE-2024-64484
 pytest==8.0.2
 #safety==2.3.5
+safety==3.2.11
 pylint==3.0.3
 gunicorn>=23.0.0
 packaging>=21.0,<22.0
