--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -36,3 +36,4 @@ jobs:
       uses: github/codeql-action/analyze@v2
       with:
         category: "/language:${{matrix.language}}"
+        queries: github/codeql/custom-queries/hardcoded-credentials.ql
