--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -30,7 +30,7 @@ jobs:
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
-        queries: +security-extended,+security-and-quality
+        queries: +security-extended,+security-and-quality,custom-queries/cred-scan.ql
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
