--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,37 +1,16 @@
-name: "CodeQL Security Scan"
+name: "Custom CodeQL Config"
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  schedule:
-    - cron: '30 1 * * 0'
+queries:
+  - uses: security-extended
+  - uses: security-and-quality
+  - name: Custom Queries
+    uses: ./.github/codeql/custom-queries
+    from: local
 
-jobs:
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'python' ]
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: ${{ matrix.language }}
-        queries: ./custom-queries/cred-scan.ql
-
-    - name: List project files
-      run: ls -R
-    
+paths:
+  - src
+  - app.py
+paths-ignore:
+  - '**/test/**'
+  - '**/tests/**'
+  - '**/*.test.py'
