--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -1,16 +1,40 @@
-name: "Custom CodeQL Config"
+name: "CodeQL Security Scan"
 
-queries:
-  - uses: security-extended
-  - uses: security-and-quality
-  - name: Custom Queries
-    uses: ./.github/codeql/custom-queries
-    from: local
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  schedule:
+    - cron: '30 1 * * 0'
 
-paths:
-  - src
-  - app.py
-paths-ignore:
-  - '**/test/**'
-  - '**/tests/**'
-  - '**/*.test.py'
+jobs:
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'python' ]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: ${{ matrix.language }}
+        queries: +security-extended,+security-and-quality,.github/workflows/custom-queries/cred-scan.ql
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+
+    - name: List project files
+      run: ls -R
+    
