--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,10 +1,15 @@
-name: "CodeQL Analysis"
+  name: "CodeQL Analysis"
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+
+permissions:
+  actions: read
+  contents: read
+  security-events: write
 
 jobs:
   analyze:
