--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,35 +2,35 @@ name: "CodeQL Analysis"
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main  # Specify the branch you want to analyze
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
   schedule:
-    - cron: '30 1 * * 0' # Run every Sunday at 1:30 AM
-
-permissions:
-  actions: read
-  contents: read
-  security-events: write # Required to upload results to the Security tab
+    - cron: '0 0 * * 0'  # Weekly analysis (optional)
 
 jobs:
-  analyze:
-    name: Analyze
+  codeql-analysis:
+    permissions:
+      actions: read
+      contents: read
+      security-events: write  # Required for CodeQL to upload results
+
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'python' ] # Specify the languages to analyze
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: ${{ matrix.language }}
+      # Initialize CodeQL
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: python  # Specify the languages to analyze
+          config-file: .github/security/codeql-config.yml  # Path to the custom config file
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
+      # Run the CodeQL analysis
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
