--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,34 +3,29 @@ name: "CodeQL Analysis"
 on:
   push:
     branches:
-      - main  # Specify the branch you want to analyze
+      - main
   pull_request:
     branches:
       - main
-  schedule:
-    - cron: '0 0 * * 0'  # Weekly analysis (optional)
 
 jobs:
   codeql-analysis:
     permissions:
       actions: read
       contents: read
-      security-events: write  # Required for CodeQL to upload results
+      security-events: write
 
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Initialize CodeQL
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: python  # Specify the languages to analyze
-          config-file: .github/security/codeql-config.yml  # Path to the custom config file
+          languages: python
+          config-file: .github/security/codeql-config.yml
 
-      # Run the CodeQL analysis
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
