--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -87,6 +87,9 @@ jobs:
         exit 1
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
+      uses: github/codeql-action/analyze@v3,github/codeql-action/init@v3
       with:
         category: "/language:${{matrix.language}}"
+        config-file: ./.github/workflow/codeql.yml
+        queries: +security-and-quality,octo-org/python-qlpack/show_ifs.ql@main
+        packs: +scope/pack1,scope/pack2@1.2.3,scope/pack3@4.5.6:path/to/queries
