--- a/.github/workflows/security/codeql-config.yml
+++ b/.github/workflows/security/codeql-config.yml
@@ -2,14 +2,13 @@ name: "CodeQL Python Configuration"
 
 queries:
   # Use standard CodeQL queries for Python
-  - uses: codeql/python-queries@latest
+  - uses: github/codeql/python-queries@latest
 
   # Use extended security queries provided by CodeQL
-  - uses: codeql/security-extended@latest
+  - uses: github/codeql/security-extended@latest
 
   # Use security and quality queries for broader checks
-  - uses: codeql/security-and-quality@latest
+  - uses: github/codeql/security-and-quality@latest
 
-  # Add custom queries, if needed, by specifying their relative paths
-  # Uncomment the following line if you have custom queries in your repository
+  # Uncomment this to include custom queries
   # - path: custom-queries/secrets-scan.ql
