--- a/.github/workflows/security/codeql-config.yml
+++ b/.github/workflows/security/codeql-config.yml
@@ -3,14 +3,16 @@ name: "CodeQL Python Configuration"
 queries:
   # Use standard CodeQL queries for Python
   #- uses: github/codeql/python-queries@main
+  #- uses: github/codeql/python-queries@main
+   
 
   # Use extended security queries provided by CodeQL
-  #- uses: github/codeql/security-extended@main
+  #- uses: github/python/ql/src/codeql-suites/security-extended@main
 
   # Use security and quality queries for broader checks
-  #- uses: github/codeql/security-and-quality@main
+  - uses: github/codeql/security-and-quality@main
 
   # Uncomment this to include custom queries
   # - path: custom-queries/secrets-scan.ql
 
-  - path: python
+  #- path: python
