--- a/.github/workflows/security/codeql-config.yml
+++ b/.github/workflows/security/codeql-config.yml
@@ -10,9 +10,9 @@ queries:
   #- uses: github/python/ql/src/codeql-suites/security-extended@main
 
   # Use security and quality queries for broader checks
-  - uses: github/codeql/security-and-quality@main
+  #- uses: github/codeql/security-and-quality@main
 
   # Uncomment this to include custom queries
   # - path: custom-queries/secrets-scan.ql
 
-  #- path: python
+  - path: python
