--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,13 +5,14 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  schedule:
+    - cron: '18 6 * * 0'
 
 jobs:
   analyze:
     runs-on: ubuntu-latest
     permissions:
       security-events: write
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -20,7 +21,12 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         languages: python
-        config-file: .github/workflows/security/codeql-config.yml
+        queries: +
+          - github/codeql/python-queries@main
+          - github/codeql/security-and-quality@main
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
+      env:
+        ACTIONS_STEP_DEBUG: true
+        CODEQL_ACTION_DEBUG: true
