--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -22,8 +22,8 @@ jobs:
       with:
         languages: python
         queries: +
-          - github/codeql/python-queries@main
-          - github/codeql/security-and-quality@main
+          - github/codeql/python-queries@latest
+          - github/codeql/security-and-quality@latest
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
