--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -24,6 +24,7 @@ jobs:
         queries: +
           - github/codeql/python-queries@latest
           - github/codeql/security-and-quality@latest
+          - ./custom-queries/secrets-scan.ql
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
