--- a/.github/workflows/security/codeql-config.yml
+++ b/.github/workflows/security/codeql-config.yml
@@ -2,3 +2,4 @@ name: "Python Security Queries"
 queries:
   #- uses: github/codeql/python-queries  # Standard CodeQL queries for Python
   - uses: ./custom-queries/secrets-scan.ql  # Working fine
+  - uses: security-extended
