--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,14 +6,15 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '18 6 * * 0' # Run every Sunday at 6:18 AM UTC
+    - cron: '18 6 * * 0'  # Optional: Weekly scheduled scan
 
 jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
-    runs-on: ubuntu-latest
+    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
     permissions:
       security-events: write
+      packages: read
       actions: read
       contents: read
 
@@ -28,20 +29,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # Initialize CodeQL
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
-        queries: +security-extended # Use security-extended query pack
-
-    # If manual build is required, customize this step
+        config-file: ./.github/workflows/security/codeql-config.yml  # Specify your configuration file here
+        queries: security-extended
+        
     - if: matrix.build-mode == 'manual'
+      shell: bash
       run: |
-        echo 'Manual build mode is required. Add commands to build your code here.'
+        echo 'If you are using a "manual" build mode, replace this with build commands.'
         exit 1
 
-    # Run CodeQL Analysis
     - name: Perform CodeQL Analysis
-      uses: github/
+      uses: github/codeql-action/analyze@v3
+      with:
+        category: "/language:${{matrix.language}}"
