--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -32,10 +32,9 @@ jobs:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
-        languages: ${{ matrix.language }}
-        build-mode: ${{ matrix.build-mode }}
-        #config-file: ./.github/workflows/security/codeql-config.yml  # Specify your configuration file here
-        queries: +security-and-quality
+        languages: python
+        config-file: codeql-config.yml
+   
         
     - if: matrix.build-mode == 'manual'
       shell: bash
