--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '18 6 * * 0'  # Optional: Weekly scheduled scan
+    - cron: '18 6 * * 0'
 
 jobs:
   analyze:
@@ -14,17 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       security-events: write
-      packages: read
-      actions: read
-      contents: read
-
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - language: python
-            build-mode: none
-
+        language: [ 'python' ]
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -32,18 +25,10 @@ jobs:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
-        languages: python
-        queries: +secrets
-        additional-trap-options: "--extract-all-files"
-   
-        
-    - if: matrix.build-mode == 'manual'
-      shell: bash
-      run: |
-        echo 'If you are using a "manual" build mode, replace this with build commands.'
-        exit 1
+        config-file: ./.github/workflows/security/codeql-config.yml
+        languages: ${{ matrix.language }}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
-        category: "/language:${{matrix.language}}"
+        category: "/language:${{ matrix.language }}"
