--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -62,7 +62,10 @@ jobs:
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
         #config-file: ./.github/codeql/custom-security-and-quality.qls
-        queries: './custom-queries'
+        #config-file: ./.github/codeql/codeql-config.yml
+        queries: +security-and-quality,octo-org/python-qlpack/show_ifs.ql@main
+        packs: +scope/pack1,scope/pack2@1.2.3,scope/pack3@4.5.6:path/to/queries
+        #queries: './custom-queries'
         debug: true
 
         # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
