--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -63,8 +63,9 @@ jobs:
         # Prefix the list here with "+" to use these queries and those in the config file.
         #config-file: ./.github/codeql/custom-security-and-quality.qls
         #config-file: ./.github/codeql/codeql-config.yml
-        queries: +security-and-quality,octo-org/python-qlpack/show_ifs.ql@main
-        packs: +scope/pack1,scope/pack2@1.2.3,scope/pack3@4.5.6:path/to/queries
+        #queries: +security-and-quality,octo-org/python-qlpack/show_ifs.ql@main
+        queries: +security-and-quality
+        #packs: +scope/pack1,scope/pack2@1.2.3,scope/pack3@4.5.6:path/to/queries
         #queries: './custom-queries'
         debug: true
 
