--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -92,4 +92,4 @@ jobs:
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:${{matrix.language}}"
-        debug: true
+        #debug: true
