--- a/custom-queries/qlpack.yml
+++ b/custom-queries/qlpack.yml
@@ -4,8 +4,8 @@ groups:
   - python
   - queries
 dependencies:
-  codeql/python-all: ${workspace}
-  codeql/suite-helpers: ${workspace}
+  codeql/python-all: "*"
+  codeql/suite-helpers: "*"
 suites: codeql-suites
 extractor: python
 defaultSuiteFile: codeql-suites/python-code-scanning.qls
