--- a/custom-queries/qlpack.yml
+++ b/custom-queries/qlpack.yml
@@ -1,12 +1,16 @@
 name: codeql/python-queries
 version: 1.3.5-dev
-groups:
-  - python
-  - queries
+# groups:
+#   - python
+#  - queries
 dependencies:
   codeql/python-all: "*"
-  codeql/suite-helpers: "*"
+#  codeql/suite-helpers: "*"
 # suites: codeql-suites
 # extractor: python
 # defaultSuiteFile: codeql-suites/python-code-scanning.qls
-warnOnImplicitThis: true
+#warnOnImplicitThis: true
+# name: custom-queries
+# version: 0.0.1
+# dependencies:
+#   codeql/csharp-queries: "*"
