--- a/custom-queries/qlpack.yml
+++ b/custom-queries/qlpack.yml
@@ -1,16 +1,12 @@
 name: codeql/python-queries
 version: 1.3.5-dev
-# groups:
-#   - python
-#  - queries
+groups:
+  - python
+  - queries
 dependencies:
   codeql/python-all: "*"
-#  codeql/suite-helpers: "*"
-# suites: codeql-suites
-# extractor: python
-# defaultSuiteFile: codeql-suites/python-code-scanning.qls
-#warnOnImplicitThis: true
-# name: custom-queries
-# version: 0.0.1
-# dependencies:
-#   codeql/csharp-queries: "*"
+  codeql/suite-helpers: "*"
+suites: codeql-suites
+extractor: python
+defaultSuiteFile: codeql-suites/python-code-scanning.qls
+warnOnImplicitThis: true
