--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -2,8 +2,8 @@ name: "CodeQL config"
 queries: 
   - name: Run custom queries
     uses: ./custom-queries
-  - name: Use a query suite file (run queries from a query suite in this repo)
-    uses: ./codeql-packs/complex-python-codeql-pack/rootAndBar.qls
+  - name: Use an external query (run a single query from an external CodeQL pack)
+    uses: octo-org/python-codeql-pack/show_ifs.ql@main
   # Run all extra query suites, both because we want to
   # and because it'll act as extra testing. This is why
   # we include both even though one is a superset of the
